# exo-planet

./: .gitignore  2025_output.csv  NOTES.txt  PSCompPars_2025.05.01_21.27.33.csv  README.md  corrected_output_2025-11-13.csv  pyproject.toml  scaled_cart_data.csv
blender/: blender_plot_script.py  plot_script  pointfield_sandbox.blend
data/: PSCompPars_2025.11.13_22.12.27.csv  corrected_output_2025-11-13.csv  data_location.csv
data/unused/: scaled_cart_data.csv  scaled_data.csv
exo_planet/: data_func.py  graphical_func.py  main.py  plot_test_3d.py  scale_transform_data.py
processing/: processing_notes
processing/pointfield/: pointfield.pde
processing/star_map/: star_map.pde
tests/: test_scale_transform_data.py
