[tool.poetry]
name = "exo-planet"
version = "0.1.0"
description = ""
authors = ["dalioshin <dalioshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
plotly = "^5.20.0"
numpy = "^2.2.4"
astroquery = "^0.4.11"
pytest = "^9.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
